Show artist representative images.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -63,11 +63,12 @@ Unconstrained sampling&Constrained sampling\\
 
 \begin{figure*}[ht]
 \begin{tabular}{cc} 
-\includegraphics[width=.475\linewidth]{figs/styleSugar}&\includegraphics[width=.475\linewidth]{figs/styleAlbenaj}\\
+\includegraphics[width=.48\linewidth]{figs/styleSugarExamples}&\includegraphics[width=.48\linewidth]{figs/styleAlbenajExamples}\vspace{1.0em}\\
+\includegraphics[width=.48\linewidth]{figs/styleSugar}&\includegraphics[width=.48\linewidth]{figs/styleAlbenaj}\\
 Artist A&Artist B\\
 \end{tabular}
 
-\caption{Our data-driven approach makes it easy to capture the styles of different artists. Here, we show results sampled from two different models, each trained on 100 images of a single artist.~\remark{D: We should show some representative images from each artist, so the reader can see that not only are these two results different, but they also capture each intended style.}}
+\caption{Our data-driven approach makes it easy to capture the styles of different artists. Top: representative images from two different artists. Bottom: results sampled from two different models, each trained on 100 images from the artist.}
 \vspace{-1.0em}
 \end{figure*}
 
