--- a/latex/siggraph2013/spatialcolor.tex
+++ b/latex/siggraph2013/spatialcolor.tex
@@ -21,9 +21,9 @@ We extract such a color theme from a pattern by taking the colors of the five la
 
 The term statistics function is then defined as the log-normalized theme rating under O'Donovan's compatibility model. Formally:
 \begin{equation*}
-\colorCompatTerm(\colors, \pattern) = \ln(\texttt{compat}(\texttt{theme}(\colors, \pattern))/5)
+\colorCompatTerm(\colors, \pattern) = \ln(\textrm{compat}(\textrm{theme}(\colors, \pattern))/5)
 \end{equation*}
-where $\texttt{theme}$ is the ordered theme extracted from the pattern and $\texttt{compat}$ is the predicted rating from the O'Donovan model.
+where $\textsl{theme}$ is the ordered theme extracted from the pattern and $\textsl{compat}$ is the predicted rating from the O'Donovan model.
 
 Note that there is nothing special about the O'Donovan model that makes it work in our case. Our modeling framework is general enough to accomodate any color compatibility or harmony model that can `score' a set of colors.
 
