--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -16,20 +16,20 @@
 \newcommand{\expectation}{\mathds{E}}
 
 \newcommand{\prop}{\pi}
-\newcommand{\unaryProps}{\Pi^{Unary}}
-\newcommand{\binaryProps}{\Pi^{Binary}}
-\newcommand{\groupTerm}{\Phi^{Group}_\pi}
-\newcommand{\segTerm}{\Phi^{Seg}_\pi}
-\newcommand{\adjTerm}{\Phi^{Adj}_\pi}
+\newcommand{\unaryProps}{\Pi^{\textrm{Unary}}}
+\newcommand{\binaryProps}{\Pi^{\textrm{Binary}}}
+\newcommand{\groupTerm}{\Phi^{\textrm{Group}}_\pi}
+\newcommand{\segTerm}{\Phi^{\textrm{Seg}}_\pi}
+\newcommand{\adjTerm}{\Phi^{\textrm{Adj}}_\pi}
 \newcommand{\neighbors}{n}
 \newcommand{\adj}{\text{adj}}
 \newcommand{\adjStrength}{\text{str}}
 \newcommand{\size}{A}
-\newcommand{\groupInstStats}{\phi^{Group}_\pi}
-\newcommand{\segInstStats}{\phi^{Seg}_\pi}
-\newcommand{\adjInstStats}{\phi^{Adj}_\pi}
+\newcommand{\groupInstStats}{\phi^{\textrm{Group}}_\pi}
+\newcommand{\segInstStats}{\phi^{\textrm{Seg}}_\pi}
+\newcommand{\adjInstStats}{\phi^{\textrm{Adj}}_\pi}
 
-\newcommand{\colorCompatTerm}{\Phi^{ColorCompat}}
+\newcommand{\colorCompatTerm}{\Phi^{\textrm{ColorCompat}}}
 \newcommand{\factor}{\mathcal{F}}
 \newcommand{\segprime}{\segment^{\prime}}
 \newcommand{\groupprime}{\group^{\prime}}
