A comment on another result we might want to show.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -48,7 +48,7 @@ Unconstrained sampling&Constrained sampling\\
 Suggestion&Results\\
 \end{tabular}
 
-\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing eight samples drawn from the new model for each of the suggested images.}
+\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing eight samples drawn from the new model for each of the suggested images.~\remark{D: It might also be cool to have a version of this that uses a photograph as the target...}}
 \label{fig:nearbySuggestions}
 \vspace{-1.0em}
 \end{figure}
