Factor generation text. Factor/Term statistic function notation might need some tweaking, as the arguments list technically doesn't match

--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -13,21 +13,26 @@
 \newcommand{\colors}{\variable{c}}
 \newcommand{\features}{\variable{f}}
 \newcommand{\termStats}{\Phi_\term}
+\newcommand{\termInstStats}{\phi_\term}
 \newcommand{\expectation}{\mathds{E}}
 
 \newcommand{\prop}{\pi}
 \newcommand{\unaryProps}{\Pi^{\textrm{Unary}}}
 \newcommand{\binaryProps}{\Pi^{\textrm{Binary}}}
-\newcommand{\groupTerm}{\Phi^{\textrm{Group}}_\pi}
+\newcommand{\groupTerm}{\Phi^{\textrm{Grp}}_\pi}
 \newcommand{\segTerm}{\Phi^{\textrm{Seg}}_\pi}
 \newcommand{\adjTerm}{\Phi^{\textrm{Adj}}_\pi}
 \newcommand{\neighbors}{n}
 \newcommand{\adj}{\text{adj}}
 \newcommand{\adjStrength}{\text{str}}
 \newcommand{\size}{A}
-\newcommand{\groupInstStats}{\phi^{\textrm{Group}}_\pi}
+\newcommand{\groupInstStats}{\phi^{\textrm{Grp}}_\pi}
 \newcommand{\segInstStats}{\phi^{\textrm{Seg}}_\pi}
 \newcommand{\adjInstStats}{\phi^{\textrm{Adj}}_\pi}
+\newcommand{\groupTermWeight}{\mathbf{w}^{\textrm{Grp}}_\pi}
+\newcommand{\segTermWeight}{\mathbf{w}^{\textrm{Seg}}_\pi}
+\newcommand{\adjTermWeight}{\mathbf{w}^{\textrm{Adj}}_\pi}
+\newcommand{\colorCompatWeight}{\mathbf{w}^{\textrm{ColorCompat}}_\pi}
 
 \newcommand{\colorCompatTerm}{\Phi^{\textrm{ColorCompat}}}
 \newcommand{\factor}{\mathcal{F}}
